== 2.3.3 ==

  * Fixed bug that made all fields declared with the @property tag static. ( issue #262 )
  * Minor fix to better handle trailing slash on path to template (from jwmetrocat). (issue #237 )

== 2.3.2 ==

 * Minor update to the usage notes and corrected the version number displayed in the output.

== 2.3.1 ==

 * Fixed HTML typo in allfiles template. ( issue #228 )
 * Modified template to display version information for classes.
 * Modified template to better support multiple methods with the same name.
 * Fixed bug that caused template to error when backtick characters appeared around class names.

== 2.3.0 ==

  * Added option -u, --unique to avoid bug that causes multiple symbols with names that differ only by case to overwrite each others output on case-insensitive filesystems. ( issue #162 )
  * Fixed bug where {@links} in @deprecated tags did not resolve. ( issue #220 )
  * Fixed bug that caused parens around a function to make it to be unrecognized. ( issue #213 )
  * Fixed bug prevented explicit links to named anchors from working (thanks katgao.pku). ( issue #215 )
  * Fixed bug that prevented full description from appearing in file overview. ( issue #224 )
  
== 2.2.1 ==

  * Fixed bug with class template, where sorting of methods was accidentally removed (thanks dezfowler).
  * Added missing test files for the @exports unit tests.

== 2.2.0 ==

  * Fixed bug that caused exception when given a folder containing non-js files, even with the x commandline option set to "js". ( issue #193 )
  * Fixed typo in index template [patch submitted by olle]. ( issue #198 )
  * Modified @borrows tag experimentally to allow for missing "as ..." clause.
  * Added support for the @exports tag, to allow one symbol to be documented as another.
  * Added support for the -S option to document code following the Secure Modules pattern.
  
== 2.1.0 ==

  * Added support for the @event tag.
  * Fixed bug that prevented the : character from appearing in symbol names.