@@ -143,6 +143,17 @@ var testCases = [
 	}
 	,
 	function() {
+		symbolize({a:true, p: true,  _: [SYS.pwd+"test/memberof2.js"]});
+		
+		is('symbols.getSymbol("Foo#bar").alias', "Foo#bar", 'An inner function can be documented as an instance method.');
+		is('symbols.getSymbol("Foo.zip").alias', "Foo.zip", 'An inner function can be documented as a static method.');
+		is('symbols.getSymbol("Foo.Fiz").alias', "Foo.Fiz", 'An inner function can be documented as a static constructor.');
+		is('symbols.getSymbol("Foo.Fiz#fipple").alias', "Foo.Fiz#fipple", 'An inner function can be documented as a static constructor with a method.');
+		is('symbols.getSymbol("Foo#blat").alias', "Foo#blat", 'An global function can be documented as an instance method.');
+
+	}
+	,
+	function() {
 		symbolize({a:true, p:true, _: [SYS.pwd+"test/borrows.js"]});
 
 		is('symbols.getSymbol("Layout").name', "Layout", 'Constructor can be found.');
